--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: discord-oauth-bot
+    name: m.m.buckup-bot
     env: python
     buildCommand: pip install -r requirements.txt
     startCommand: python main.py
